feat(playground): render the CMP first frame (desktop parity with Android) (#3060)